--- a/notebooks/IAA.ipynb
+++ b/notebooks/IAA.ipynb
@@ -71,161 +71,185 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 47,
    "id": "07738af3-f6f3-4868-be7b-69258b0ec3aa",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import spacy"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "id": "eea5c733-d512-4bed-b643-cb0a5a01915c",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "import spacy\n",
     "nlp = spacy.load(\"en_core_web_sm\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 48,
    "id": "919e2eea-0032-4232-95a8-a57085cb3310",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "doc = nlp(\"this is a test document made in utah.\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "id": "add063d2-cb64-451f-8dda-65cc9cd719e0",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "(utah,)"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Spacy 4 9 PERSON\n",
+      "utah 37 41 GPE\n"
+     ]
     }
    ],
    "source": [
-    "doc.ents"
+    "doc1 = nlp(\"Mr. Spacy is a test document made in utah.\")\n",
+    "for ent in doc1.ents:\n",
+    "    print(ent.text, ent.start_char, ent.end_char, ent.label_)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "bda30c7e-df45-4e2e-b63e-916da8f1ffe4",
+   "execution_count": 49,
+   "id": "18e248b2-be83-4214-b4ee-fd790b29993e",
    "metadata": {},
    "outputs": [],
    "source": [
-    "doc2 = nlp(\"this is a test document made in utah.\")"
+    "doc2 = nlp(\"Mr. Spacy is a test document made in utah.\")"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 11,
-   "id": "20aaf660-1860-489a-a326-06347f7b78d6",
+   "cell_type": "markdown",
+   "id": "de534d63-0fa7-4878-925b-7fc279b08da3",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "ents = doc.ents"
+    "Now we want to modify the name entity: 'Mr. Spacy'-> [PERSON]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 50,
    "id": "d0ecb69f-9a0e-4930-ab72-36dea261fea6",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Mr. Spacy 0 9 PERSON\n",
+      "utah 37 41 GPE\n"
+     ]
+    }
+   ],
+   "source": [
+    "from spacy.tokens import Span\n",
+    "\n",
+    "# Create a span for the new entity\n",
+    "fb_ent = Span(doc2, 0, 2, label=\"PERSON\")\n",
+    "orig_ents = list(doc2.ents)\n",
+    "\n",
+    "# Modify the provided entity spans, leaving the rest unmodified\n",
+    "doc2.set_ents([fb_ent], default=\"unmodified\")\n",
+    "\n",
+    "for ent in doc2.ents:\n",
+    "    print(ent.text, ent.start_char, ent.end_char, ent.label_)"
+   ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ed28ee93-5f7a-4a34-b610-44467c63c92c",
+   "cell_type": "markdown",
+   "id": "dee773d9-ae4f-488e-bd43-34eddee749ba",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# Inter Annotator Agreement"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "ba7ed175-5b0c-4223-a8b7-fafe2285b6a4",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 55,
    "id": "f9b138a1-a375-4503-93fd-76cf9e2721b1",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def overlaps(ent1, ent2):\n",
+    "def overlaps(ent1, ent2):#compare the span \n",
     "    '''calculate whether two ents overlap\n",
     "    returns bool\n",
-    "    '''"
+    "    '''\n",
+    "    if ent1.start_char <= ent2.start_char and ent1.end_char > ent2.start_char:\n",
+    "        return True;\n",
+    "    elif ent1.start_char >= ent2.start_char and ent1.start_char<ent2.end_char:\n",
+    "        return True;\n",
+    "    else:\n",
+    "        return False;"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 56,
    "id": "00a8e6a7-7116-405c-addd-b19e08a9fae6",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def exact_match(ent1, ent2):\n",
-    "    '''calculate whether two ents have exact overlap\n",
+    "def exact_match(ent1, ent2):#compare the span \n",
+    "    '''calculate whether two ents have exact overlap \n",
     "    returns bool\n",
-    "    '''"
+    "    '''\n",
+    "    if ent1.start_char == ent2.start_char and ent1.end_char == ent2.end_char:\n",
+    "        return True;\n",
+    "    else:\n",
+    "        return False;"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 58,
    "id": "650bc405-f61d-4287-ac88-14ed6072bebe",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def agreement(doc1, doc2, fuzzy):\n",
+    "def agreement(doc1, doc2, fuzzy): #pair wise\n",
     "    '''calculate the agreement betweent two docs\n",
     "       returns confusion matrix\n",
     "    '''\n",
+    "    ents1 = doc1.ents; \n",
+    "    ents2 = doc2.ents;\n",
+    "    \n",
+    "    \n",
     "    tp = 0\n",
     "    fp = 0\n",
     "    fn = 0\n",
-    "    tn = 0\n",
-    "    for ent1 in doc1:\n",
-    "        for ent2 in doc2\n",
-    "            if loose:\n",
-    "                if overlaps(ent1, ent2)\n",
-    "                    tp++\n",
-    "                else:\n",
-    "                    fn++\n",
-    "            else\n",
-    "                exact_match\n",
-    "    return (tp, fp, fn, tn)"
+    "    tn = 0 #we do not have this\n",
+    "    \n",
+    "    if fuzzy: # span overlap\n",
+    "        for ent1 in ents1:\n",
+    "            findAnnot = False;\n",
+    "            for ent2 in ents2:#treat ents2 as golden\n",
+    "                if overlaps(ent1, ent2) and ent1.label_==ent2.label_:\n",
+    "                    tp=tp+1;\n",
+    "                    findAnnot = True;\n",
+    "                elif overlaps(ent1, ent2) and not (ent1.label_==ent2.label_):\n",
+    "                    fn=fn+1;\n",
+    "                    findAnnot = True;\n",
+    "            if FindAnnot==False:\n",
+    "                fp=fp+1;\n",
+    "    else: #exact\n",
+    "        for ent1 in ents1:\n",
+    "            findAnnot = False;\n",
+    "            for ent2 in ents2:#treat ents2 as golden\n",
+    "                if exact_match(ent1, ent2) and ent1.label_==ent2.label_:\n",
+    "                    tp=tp+1;\n",
+    "                    findAnnot = True;\n",
+    "                elif exact_match(ent1, ent2) and not (ent1.label_==ent2.label_):\n",
+    "                    fn=fn+1;\n",
+    "                    findAnnot = True;\n",
+    "            if FindAnnot==False:\n",
+    "                fp=fp+1;\n",
+    "        \n",
+    "    return (tp, fp, fn)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 60,
    "id": "b609c982-0b94-4913-b23b-a672950bd99b",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def pairwise_f1(confusion matrix):\n",
+    "def pairwise_f1(tp, fp, fn):\n",
     "    '''calculate f1 with given true positive, false positive, and false negative values'''\n",
+    "    f1 = 2*tp/float(2*tp+fp+fn)\n",
     "    \n",
     "    return f1"
    ]
@@ -248,7 +272,7 @@
    "source": [
     "def corpus_agreement(docs1, docs2, fuzzy):\n",
     "    '''calculate f1 over an entire corpus of documents'''\n",
-    "    \n",
+    "\n",
     "    corpus_confusion_matrix = ()\n",
     "    \n",
     "    for i, doc1 in enumerate(docs1):\n",
@@ -282,7 +306,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.13"
+   "version": "3.9.12"
   }
  },
  "nbformat": 4,
