--- a/notebooks/IAA-John.ipynb
+++ b/notebooks/IAA-John.ipynb
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "id": "07738af3-f6f3-4868-be7b-69258b0ec3aa",
    "metadata": {},
    "outputs": [],
@@ -81,7 +81,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
+   "id": "5a2ce3f0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Collecting en-core-web-md==3.1.0\n",
+      "  Downloading https://github.com/explosion/spacy-models/releases/download/en_core_web_md-3.1.0/en_core_web_md-3.1.0-py3-none-any.whl (45.4 MB)\n",
+      "\u001b[K     |████████████████████████████████| 45.4 MB 3.1 MB/s eta 0:00:01\n",
+      "\u001b[?25hRequirement already satisfied: spacy<3.2.0,>=3.1.0 in /Users/u0873475/opt/anaconda3/envs/python3.8/lib/python3.8/site-packages (from en-core-web-md==3.1.0) (3.1.6)\n",
+      "Requirement already satisfied: srsly<3.0.0,>=2.4.1 in /Users/u0873475/opt/anaconda3/envs/python3.8/lib/python3.8/site-packages (from spacy<3.2.0,>=3.1.0->en-core-web-md==3.1.0) (2.4.3)\n",
+      "Requirement already satisfied: murmurhash<1.1.0,>=0.28.0 in /Users/u0873475/opt/anaconda3/envs/python3.8/lib/python3.8/site-packages (from spacy<3.2.0,>=3.1.0->en-core-web-md==3.1.0) (1.0.7)\n",
+      "Requirement already satisfied: tqdm<5.0.0,>=4.38.0 in /Users/u0873475/opt/anaconda3/envs/python3.8/lib/python3.8/site-packages (from spacy<3.2.0,>=3.1.0->en-core-web-md==3.1.0) (4.64.0)\n",
+      "Requirement already satisfied: jinja2 in /Users/u0873475/opt/anaconda3/envs/python3.8/lib/python3.8/site-packages (from spacy<3.2.0,>=3.1.0->en-core-web-md==3.1.0) (3.1.2)\n",
+      "Requirement already satisfied: numpy>=1.15.0 in /Users/u0873475/opt/anaconda3/envs/python3.8/lib/python3.8/site-packages (from spacy<3.2.0,>=3.1.0->en-core-web-md==3.1.0) (1.22.4)\n",
+      "Requirement already satisfied: catalogue<2.1.0,>=2.0.6 in /Users/u0873475/opt/anaconda3/envs/python3.8/lib/python3.8/site-packages (from spacy<3.2.0,>=3.1.0->en-core-web-md==3.1.0) (2.0.7)\n",
+      "Requirement already satisfied: pydantic!=1.8,!=1.8.1,<1.9.0,>=1.7.4 in /Users/u0873475/opt/anaconda3/envs/python3.8/lib/python3.8/site-packages (from spacy<3.2.0,>=3.1.0->en-core-web-md==3.1.0) (1.8.2)\n",
+      "Requirement already satisfied: wasabi<1.1.0,>=0.8.1 in /Users/u0873475/opt/anaconda3/envs/python3.8/lib/python3.8/site-packages (from spacy<3.2.0,>=3.1.0->en-core-web-md==3.1.0) (0.9.1)\n",
+      "Requirement already satisfied: pathy>=0.3.5 in /Users/u0873475/opt/anaconda3/envs/python3.8/lib/python3.8/site-packages (from spacy<3.2.0,>=3.1.0->en-core-web-md==3.1.0) (0.6.1)\n",
+      "Requirement already satisfied: requests<3.0.0,>=2.13.0 in /Users/u0873475/opt/anaconda3/envs/python3.8/lib/python3.8/site-packages (from spacy<3.2.0,>=3.1.0->en-core-web-md==3.1.0) (2.15.1)\n",
+      "Requirement already satisfied: click<8.1.0 in /Users/u0873475/opt/anaconda3/envs/python3.8/lib/python3.8/site-packages (from spacy<3.2.0,>=3.1.0->en-core-web-md==3.1.0) (8.0.4)\n",
+      "Requirement already satisfied: typer<0.5.0,>=0.3.0 in /Users/u0873475/opt/anaconda3/envs/python3.8/lib/python3.8/site-packages (from spacy<3.2.0,>=3.1.0->en-core-web-md==3.1.0) (0.4.1)\n",
+      "Requirement already satisfied: cymem<2.1.0,>=2.0.2 in /Users/u0873475/opt/anaconda3/envs/python3.8/lib/python3.8/site-packages (from spacy<3.2.0,>=3.1.0->en-core-web-md==3.1.0) (2.0.6)\n",
+      "Requirement already satisfied: spacy-legacy<3.1.0,>=3.0.8 in /Users/u0873475/opt/anaconda3/envs/python3.8/lib/python3.8/site-packages (from spacy<3.2.0,>=3.1.0->en-core-web-md==3.1.0) (3.0.9)\n",
+      "Requirement already satisfied: blis<0.8.0,>=0.4.0 in /Users/u0873475/opt/anaconda3/envs/python3.8/lib/python3.8/site-packages (from spacy<3.2.0,>=3.1.0->en-core-web-md==3.1.0) (0.7.7)\n",
+      "Requirement already satisfied: thinc<8.1.0,>=8.0.12 in /Users/u0873475/opt/anaconda3/envs/python3.8/lib/python3.8/site-packages (from spacy<3.2.0,>=3.1.0->en-core-web-md==3.1.0) (8.0.16)\n",
+      "Requirement already satisfied: packaging>=20.0 in /Users/u0873475/opt/anaconda3/envs/python3.8/lib/python3.8/site-packages (from spacy<3.2.0,>=3.1.0->en-core-web-md==3.1.0) (21.3)\n",
+      "Requirement already satisfied: preshed<3.1.0,>=3.0.2 in /Users/u0873475/opt/anaconda3/envs/python3.8/lib/python3.8/site-packages (from spacy<3.2.0,>=3.1.0->en-core-web-md==3.1.0) (3.0.6)\n",
+      "Requirement already satisfied: setuptools in /Users/u0873475/opt/anaconda3/envs/python3.8/lib/python3.8/site-packages (from spacy<3.2.0,>=3.1.0->en-core-web-md==3.1.0) (61.2.0)\n",
+      "Requirement already satisfied: pyparsing!=3.0.5,>=2.0.2 in /Users/u0873475/opt/anaconda3/envs/python3.8/lib/python3.8/site-packages (from packaging>=20.0->spacy<3.2.0,>=3.1.0->en-core-web-md==3.1.0) (3.0.9)\n",
+      "Requirement already satisfied: smart-open<6.0.0,>=5.0.0 in /Users/u0873475/opt/anaconda3/envs/python3.8/lib/python3.8/site-packages (from pathy>=0.3.5->spacy<3.2.0,>=3.1.0->en-core-web-md==3.1.0) (5.2.1)\n",
+      "Requirement already satisfied: typing-extensions>=3.7.4.3 in /Users/u0873475/opt/anaconda3/envs/python3.8/lib/python3.8/site-packages (from pydantic!=1.8,!=1.8.1,<1.9.0,>=1.7.4->spacy<3.2.0,>=3.1.0->en-core-web-md==3.1.0) (4.2.0)\n",
+      "Requirement already satisfied: MarkupSafe>=2.0 in /Users/u0873475/opt/anaconda3/envs/python3.8/lib/python3.8/site-packages (from jinja2->spacy<3.2.0,>=3.1.0->en-core-web-md==3.1.0) (2.1.1)\n",
+      "Installing collected packages: en-core-web-md\n",
+      "Successfully installed en-core-web-md-3.1.0\n",
+      "\u001b[38;5;2m✔ Download and installation successful\u001b[0m\n",
+      "You can now load the package via spacy.load('en_core_web_md')\n"
+     ]
+    }
+   ],
+   "source": [
+    "#!python -m spacy download en_core_web_md"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "id": "eea5c733-d512-4bed-b643-cb0a5a01915c",
    "metadata": {},
    "outputs": [],
@@ -92,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 7,
    "id": "919e2eea-0032-4232-95a8-a57085cb3310",
    "metadata": {},
    "outputs": [],
@@ -102,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 8,
    "id": "add063d2-cb64-451f-8dda-65cc9cd719e0",
    "metadata": {},
    "outputs": [
@@ -112,7 +160,7 @@
        "(utah, mississippi)"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -123,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 9,
    "id": "bda30c7e-df45-4e2e-b63e-916da8f1ffe4",
    "metadata": {},
    "outputs": [],
@@ -133,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 10,
    "id": "20aaf660-1860-489a-a326-06347f7b78d6",
    "metadata": {},
    "outputs": [
@@ -143,7 +191,7 @@
        "(utah, mississippi, lake city)"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -162,15 +210,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "id": "ed28ee93-5f7a-4a34-b610-44467c63c92c",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "a test PERSON\n",
+      "[('a test', 'PERSON'), ('utah', 'GPE'), ('mississippi', 'PERSON'), ('lake', 'GPE')]\n"
+     ]
+    }
+   ],
+   "source": [
+    "from spacy.tokens import Span\n",
+    "spand = list()\n",
+    "spand += [Span(doc, 2, 4, label=\"PERSON\"),Span(doc,7,8,label=\"GPE\"),Span(doc,9,10,label=\"PERSON\"),Span(doc,13,14,label=\"GPE\")]\n",
+    "print(span.text, span.label_)\n",
+    "\n",
+    "# Add the span to the doc's entities\n",
+    "doc.ents = spand\n",
+    "\n",
+    "# Print entities' text and labels\n",
+    "print([(ent.text, ent.label_) for ent in doc.ents])"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 45,
    "id": "13836407",
    "metadata": {},
    "outputs": [
@@ -178,18 +246,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2 1 0\n"
+      "2 1 2\n"
      ]
     }
    ],
    "source": [
-    "tp,fp,fn = agreement(doc,doc2,1)\n",
+    "tp,fp,fn = agreement(doc,doc2,1,1)\n",
     "print(tp,fp,fn)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 15,
    "id": "f9b138a1-a375-4503-93fd-76cf9e2721b1",
    "metadata": {},
    "outputs": [],
@@ -203,8 +271,8 @@
     "#Note that it may be slightly more efficient to calculate tp,fp,fn as iterators within the code, as opposed to reiterating through\n",
     "#the resultant list.\n",
     "\n",
-    "def overlaps(doc1_ents, doc2_ents):\n",
-    "    '''Calculates overlapping entities between two spacy documents\n",
+    "def overlaps(doc1_ents, doc2_ents,labels):\n",
+    "    '''Calculates overlapping entities between two spacy documents. Also checks for matching labels if label=1.\n",
     "    \n",
     "    Return:\n",
     "        Dictionaries with the mapping of matching entity indices:\n",
@@ -220,7 +288,7 @@
     "\n",
     "    for index1,ent1 in enumerate(doc1_ents):\n",
     "        for index2,ent2 in enumerate(doc2_ents):\n",
-    "            if (ent1.end_char >= ent2.start_char) & (ent1.start_char <= ent2.end_char):\n",
+    "            if (ent1.end_char >= ent2.start_char) & (ent1.start_char <= ent2.end_char) & ((labels==0) | (ent1.label_ == ent2.label_)):\n",
     "                if index1 not in doc1_matches.keys():\n",
     "                    doc1_matches[index1] = [index2]\n",
     "                else:\n",
@@ -236,7 +304,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
+   "id": "9f8afd7e",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
    "id": "00a8e6a7-7116-405c-addd-b19e08a9fae6",
    "metadata": {},
    "outputs": [],
@@ -249,12 +325,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 20,
    "id": "650bc405-f61d-4287-ac88-14ed6072bebe",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def agreement(doc1, doc2, loose):\n",
+    "def agreement(doc1, doc2, loose=1, labels=1):\n",
     "    '''Calculates confusion matrix for agreement between two documents.\n",
     "    \n",
     "       returns true positive, false positive, and false negative\n",
@@ -267,23 +343,50 @@
     "    doc2_ents = doc2.ents\n",
     "    \n",
     "    if loose:\n",
-    "        doc1_matches, doc2_matches = overlaps(doc1_ents, doc2_ents)\n",
+    "        doc1_matches, doc2_matches = overlaps(doc1_ents, doc2_ents,labels)\n",
     "    else:\n",
-    "        doc1_matches, doc2_matches = exact_match(doc1_ents, doc2_ents)\n",
+    "        doc1_matches, doc2_matches = exact_match(doc1_ents, doc2_ents,labels)\n",
     "    \n",
     "    doc1_match_num = len(doc1_matches.keys())\n",
     "    doc2_match_num = len(doc2_matches.keys())\n",
     "    \n",
     "    duplicate_matches = 0\n",
     "    for value in doc2_matches.values():\n",
-    "        duplicate_matches += len(value)\n",
-    "    duplicate_matches -= doc2_match_num\n",
+    "        duplicate_matches += len(value) - 1\n",
     "    \n",
     "    tp = doc1_match_num - duplicate_matches #How many entity indices from doc1 matched, minus duplicated matches\n",
     "    fp = len(doc2_ents) - doc2_match_num #How many entities from doc2 that didn't match\n",
     "    fn = len(doc1_ents) - doc1_match_num #How many entities from doc1 that didn't match\n",
     "    \n",
     "    return (tp, fp, fn)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "59e050a0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Inv(3, 7, d=110)\n",
+      "l:  Inv(1, 3, d=100)\n",
+      "r:    Inv(2, 5, d=120)\n",
+      "r:  Inv(4, 6, d=130)\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "from quicksectx import IntervalNode, IntervalTree, Interval\n",
+    "tree = IntervalTree()\n",
+    "tree.add(1, 3, 100)\n",
+    "tree.add(3, 7, 110)\n",
+    "tree.add(2, 5, 120)\n",
+    "tree.add(4, 6, 130)\n",
+    "print(tree.pretty_print())"
    ]
   },
   {
