Sped up overlap function using tree searches instead of nested for-loop. Added label-matching functionality + exact match + f1.

--- a/notebooks/IAA-John.ipynb
+++ b/notebooks/IAA-John.ipynb
@@ -70,8 +70,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "aadb0fb6",
+   "metadata": {},
+   "source": [
+    "# Testing Section"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "id": "07738af3-f6f3-4868-be7b-69258b0ec3aa",
    "metadata": {},
    "outputs": [],
@@ -81,55 +89,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "5a2ce3f0",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Collecting en-core-web-md==3.1.0\n",
-      "  Downloading https://github.com/explosion/spacy-models/releases/download/en_core_web_md-3.1.0/en_core_web_md-3.1.0-py3-none-any.whl (45.4 MB)\n",
-      "\u001b[K     |████████████████████████████████| 45.4 MB 3.1 MB/s eta 0:00:01\n",
-      "\u001b[?25hRequirement already satisfied: spacy<3.2.0,>=3.1.0 in /Users/u0873475/opt/anaconda3/envs/python3.8/lib/python3.8/site-packages (from en-core-web-md==3.1.0) (3.1.6)\n",
-      "Requirement already satisfied: srsly<3.0.0,>=2.4.1 in /Users/u0873475/opt/anaconda3/envs/python3.8/lib/python3.8/site-packages (from spacy<3.2.0,>=3.1.0->en-core-web-md==3.1.0) (2.4.3)\n",
-      "Requirement already satisfied: murmurhash<1.1.0,>=0.28.0 in /Users/u0873475/opt/anaconda3/envs/python3.8/lib/python3.8/site-packages (from spacy<3.2.0,>=3.1.0->en-core-web-md==3.1.0) (1.0.7)\n",
-      "Requirement already satisfied: tqdm<5.0.0,>=4.38.0 in /Users/u0873475/opt/anaconda3/envs/python3.8/lib/python3.8/site-packages (from spacy<3.2.0,>=3.1.0->en-core-web-md==3.1.0) (4.64.0)\n",
-      "Requirement already satisfied: jinja2 in /Users/u0873475/opt/anaconda3/envs/python3.8/lib/python3.8/site-packages (from spacy<3.2.0,>=3.1.0->en-core-web-md==3.1.0) (3.1.2)\n",
-      "Requirement already satisfied: numpy>=1.15.0 in /Users/u0873475/opt/anaconda3/envs/python3.8/lib/python3.8/site-packages (from spacy<3.2.0,>=3.1.0->en-core-web-md==3.1.0) (1.22.4)\n",
-      "Requirement already satisfied: catalogue<2.1.0,>=2.0.6 in /Users/u0873475/opt/anaconda3/envs/python3.8/lib/python3.8/site-packages (from spacy<3.2.0,>=3.1.0->en-core-web-md==3.1.0) (2.0.7)\n",
-      "Requirement already satisfied: pydantic!=1.8,!=1.8.1,<1.9.0,>=1.7.4 in /Users/u0873475/opt/anaconda3/envs/python3.8/lib/python3.8/site-packages (from spacy<3.2.0,>=3.1.0->en-core-web-md==3.1.0) (1.8.2)\n",
-      "Requirement already satisfied: wasabi<1.1.0,>=0.8.1 in /Users/u0873475/opt/anaconda3/envs/python3.8/lib/python3.8/site-packages (from spacy<3.2.0,>=3.1.0->en-core-web-md==3.1.0) (0.9.1)\n",
-      "Requirement already satisfied: pathy>=0.3.5 in /Users/u0873475/opt/anaconda3/envs/python3.8/lib/python3.8/site-packages (from spacy<3.2.0,>=3.1.0->en-core-web-md==3.1.0) (0.6.1)\n",
-      "Requirement already satisfied: requests<3.0.0,>=2.13.0 in /Users/u0873475/opt/anaconda3/envs/python3.8/lib/python3.8/site-packages (from spacy<3.2.0,>=3.1.0->en-core-web-md==3.1.0) (2.15.1)\n",
-      "Requirement already satisfied: click<8.1.0 in /Users/u0873475/opt/anaconda3/envs/python3.8/lib/python3.8/site-packages (from spacy<3.2.0,>=3.1.0->en-core-web-md==3.1.0) (8.0.4)\n",
-      "Requirement already satisfied: typer<0.5.0,>=0.3.0 in /Users/u0873475/opt/anaconda3/envs/python3.8/lib/python3.8/site-packages (from spacy<3.2.0,>=3.1.0->en-core-web-md==3.1.0) (0.4.1)\n",
-      "Requirement already satisfied: cymem<2.1.0,>=2.0.2 in /Users/u0873475/opt/anaconda3/envs/python3.8/lib/python3.8/site-packages (from spacy<3.2.0,>=3.1.0->en-core-web-md==3.1.0) (2.0.6)\n",
-      "Requirement already satisfied: spacy-legacy<3.1.0,>=3.0.8 in /Users/u0873475/opt/anaconda3/envs/python3.8/lib/python3.8/site-packages (from spacy<3.2.0,>=3.1.0->en-core-web-md==3.1.0) (3.0.9)\n",
-      "Requirement already satisfied: blis<0.8.0,>=0.4.0 in /Users/u0873475/opt/anaconda3/envs/python3.8/lib/python3.8/site-packages (from spacy<3.2.0,>=3.1.0->en-core-web-md==3.1.0) (0.7.7)\n",
-      "Requirement already satisfied: thinc<8.1.0,>=8.0.12 in /Users/u0873475/opt/anaconda3/envs/python3.8/lib/python3.8/site-packages (from spacy<3.2.0,>=3.1.0->en-core-web-md==3.1.0) (8.0.16)\n",
-      "Requirement already satisfied: packaging>=20.0 in /Users/u0873475/opt/anaconda3/envs/python3.8/lib/python3.8/site-packages (from spacy<3.2.0,>=3.1.0->en-core-web-md==3.1.0) (21.3)\n",
-      "Requirement already satisfied: preshed<3.1.0,>=3.0.2 in /Users/u0873475/opt/anaconda3/envs/python3.8/lib/python3.8/site-packages (from spacy<3.2.0,>=3.1.0->en-core-web-md==3.1.0) (3.0.6)\n",
-      "Requirement already satisfied: setuptools in /Users/u0873475/opt/anaconda3/envs/python3.8/lib/python3.8/site-packages (from spacy<3.2.0,>=3.1.0->en-core-web-md==3.1.0) (61.2.0)\n",
-      "Requirement already satisfied: pyparsing!=3.0.5,>=2.0.2 in /Users/u0873475/opt/anaconda3/envs/python3.8/lib/python3.8/site-packages (from packaging>=20.0->spacy<3.2.0,>=3.1.0->en-core-web-md==3.1.0) (3.0.9)\n",
-      "Requirement already satisfied: smart-open<6.0.0,>=5.0.0 in /Users/u0873475/opt/anaconda3/envs/python3.8/lib/python3.8/site-packages (from pathy>=0.3.5->spacy<3.2.0,>=3.1.0->en-core-web-md==3.1.0) (5.2.1)\n",
-      "Requirement already satisfied: typing-extensions>=3.7.4.3 in /Users/u0873475/opt/anaconda3/envs/python3.8/lib/python3.8/site-packages (from pydantic!=1.8,!=1.8.1,<1.9.0,>=1.7.4->spacy<3.2.0,>=3.1.0->en-core-web-md==3.1.0) (4.2.0)\n",
-      "Requirement already satisfied: MarkupSafe>=2.0 in /Users/u0873475/opt/anaconda3/envs/python3.8/lib/python3.8/site-packages (from jinja2->spacy<3.2.0,>=3.1.0->en-core-web-md==3.1.0) (2.1.1)\n",
-      "Installing collected packages: en-core-web-md\n",
-      "Successfully installed en-core-web-md-3.1.0\n",
-      "\u001b[38;5;2m✔ Download and installation successful\u001b[0m\n",
-      "You can now load the package via spacy.load('en_core_web_md')\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#!python -m spacy download en_core_web_md"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "id": "eea5c733-d512-4bed-b643-cb0a5a01915c",
    "metadata": {},
    "outputs": [],
@@ -140,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "id": "919e2eea-0032-4232-95a8-a57085cb3310",
    "metadata": {},
    "outputs": [],
@@ -150,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "id": "add063d2-cb64-451f-8dda-65cc9cd719e0",
    "metadata": {},
    "outputs": [
@@ -160,7 +130,7 @@
        "(utah, mississippi)"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -171,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "id": "bda30c7e-df45-4e2e-b63e-916da8f1ffe4",
    "metadata": {},
    "outputs": [],
@@ -181,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "id": "20aaf660-1860-489a-a326-06347f7b78d6",
    "metadata": {},
    "outputs": [
@@ -191,7 +161,7 @@
        "(utah, mississippi, lake city)"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -210,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 26,
    "id": "ed28ee93-5f7a-4a34-b610-44467c63c92c",
    "metadata": {},
    "outputs": [
@@ -218,16 +188,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "a test PERSON\n",
-      "[('a test', 'PERSON'), ('utah', 'GPE'), ('mississippi', 'PERSON'), ('lake', 'GPE')]\n"
+      "[('a test', 'PERSON'), ('utah', 'GPE'), ('mississippi', 'PERSON'), ('lake', 'GPE'), ('city', 'GPE')]\n"
      ]
     }
    ],
    "source": [
     "from spacy.tokens import Span\n",
     "spand = list()\n",
-    "spand += [Span(doc, 2, 4, label=\"PERSON\"),Span(doc,7,8,label=\"GPE\"),Span(doc,9,10,label=\"PERSON\"),Span(doc,13,14,label=\"GPE\")]\n",
-    "print(span.text, span.label_)\n",
+    "spand += [Span(doc, 2, 4, label=\"PERSON\"),Span(doc,7,8,label=\"GPE\"),Span(doc,9,10,label=\"PERSON\"),Span(doc,13,14,label=\"GPE\"),Span(doc,14,15,label=\"GPE\")]\n",
     "\n",
     "# Add the span to the doc's entities\n",
     "doc.ents = spand\n",
@@ -238,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 66,
    "id": "13836407",
    "metadata": {},
    "outputs": [
@@ -246,33 +214,88 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2 1 2\n"
+      "2 1 2\n",
+      "0.5714285714285714\n"
      ]
     }
    ],
    "source": [
+    "#Run below cells before this\n",
     "tp,fp,fn = agreement(doc,doc2,1,1)\n",
-    "print(tp,fp,fn)"
+    "print(tp,fp,fn)\n",
+    "print(pairwise_f1(tp,fp,fn))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "098164e2",
+   "metadata": {},
+   "source": [
+    "# Code"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "id": "f9b138a1-a375-4503-93fd-76cf9e2721b1",
+   "execution_count": 61,
+   "id": "9f8afd7e",
    "metadata": {},
    "outputs": [],
    "source": [
+    "from quicksectx import IntervalNode, IntervalTree, Interval #note that you need the quicksectx library\n",
+    "\n",
     "#In order to make the code a little more adaptable for situations of multiple overlapping entities, as well as for \n",
     "#transparency and testing the code, I wrote the overlaps code to output a mapping of which entities are being matched. \n",
     "#Then agreement can parse this output for how many valid overlaps exist.\n",
     "\n",
     "#This makes the code a little more complicated to understand, but I think it makes everything more transparent and adaptable.\n",
     "\n",
-    "#Note that it may be slightly more efficient to calculate tp,fp,fn as iterators within the code, as opposed to reiterating through\n",
-    "#the resultant list.\n",
-    "\n",
     "def overlaps(doc1_ents, doc2_ents,labels):\n",
     "    '''Calculates overlapping entities between two spacy documents. Also checks for matching labels if label=1.\n",
+    "    \n",
+    "    Return:\n",
+    "        Dictionaries with the mapping of matching entity indices:\n",
+    "            keys: entity index from one annotation\n",
+    "            value: matched entity index from other annotation\n",
+    "        \n",
+    "        Ex: \"{1 : [2] , 3 : [4,5]}\" means that entity 1 from doc1 matches entity 1 in doc2, and entity 3 in doc1 matches \n",
+    "        entity 4 and 5 from doc2.\n",
+    "    '''\n",
+    "    \n",
+    "    doc1_matches = dict()\n",
+    "    doc2_matches = dict()\n",
+    "    \n",
+    "    tree = IntervalTree()\n",
+    "    for index2,ent2 in enumerate(doc2_ents):\n",
+    "        tree.add(ent2.start_char,ent2.end_char,index2)\n",
+    "    \n",
+    "    for index1,ent1 in enumerate(doc1_ents):\n",
+    "        matches = tree.search(ent1.start_char,ent1.end_char)\n",
+    "        for match in matches:\n",
+    "            index2 = match.data #match.data is the index of doc2_ents\n",
+    "            if ((labels == 0) | (doc2_ents[index2].label_ == ent1.label_)):\n",
+    "                if index1 not in doc1_matches.keys():\n",
+    "                    doc1_matches[index1] = [index2]\n",
+    "                else:\n",
+    "                    doc1_matches[index1].append(index2)\n",
+    "                if index2 not in doc2_matches.keys():\n",
+    "                    doc2_matches[index2] = [index1]\n",
+    "                else:\n",
+    "                    doc2_matches[index2].append(index1)\n",
+    "                \n",
+    "    return doc1_matches, doc2_matches"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "f9b138a1-a375-4503-93fd-76cf9e2721b1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "### This is the old, less efficient code. The newer code uses a tree search instead of the nested for-loop.\n",
+    "\n",
+    "def old_overlaps(doc1_ents, doc2_ents,labels):\n",
+    "    '''Old code for calculating overlapping entities between two spacy documents. Also checks for matching labels if label=1.\n",
     "    \n",
     "    Return:\n",
     "        Dictionaries with the mapping of matching entity indices:\n",
@@ -304,28 +327,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "9f8afd7e",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 62,
    "id": "00a8e6a7-7116-405c-addd-b19e08a9fae6",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def exact_match(ent1, ent2):\n",
+    "def exact_match(doc1_ents, doc2_ents, labels):\n",
     "    '''calculate whether two ents have exact overlap\n",
     "    returns bool\n",
-    "    '''"
+    "    '''\n",
+    "    \n",
+    "    doc1_matches = dict()\n",
+    "    doc2_matches = dict()\n",
+    "\n",
+    "    doc1_ent_dict = dict()\n",
+    "    doc2_ent_dict = dict()\n",
+    "    \n",
+    "    for index1,ent1 in enumerate(doc1_ents):\n",
+    "        if labels == 1: #If checking for labels, then include this in the tuple's to-be-compared elements\n",
+    "            doc1_ent_dict[(ent1.start_char,ent1.end_char,ent1.label_)] = index1\n",
+    "        else:\n",
+    "            doc1_ent_dict[(ent1.start_char,ent1.end_char)] = index1\n",
+    "            \n",
+    "    for index2,ent2 in enumerate(doc2_ents):\n",
+    "        if labels == 1:    \n",
+    "            doc2_ent_dict[(ent2.start_char,ent2.end_char,ent2.label_)] = index2\n",
+    "        else:\n",
+    "            doc2_ent_dict[(ent2.start_char,ent2.end_char)] = index2\n",
+    "        \n",
+    "    doc1_ent_set = set(doc1_ent_dict.keys())\n",
+    "    doc2_ent_set = set(doc2_ent_dict.keys())\n",
+    "    \n",
+    "    matched_ents = doc1_ent_set.intersection(doc2_ent_set)\n",
+    "    \n",
+    "    for match in matched_ents:\n",
+    "        index1 = doc1_ent_dict[match]\n",
+    "        index2 = doc2_ent_dict[match]\n",
+    "        doc1_matches[index1] = [index2]\n",
+    "        doc2_matches[index2] = [index1]\n",
+    "        \n",
+    "    return doc1_matches, doc2_matches\n",
+    "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 63,
    "id": "650bc405-f61d-4287-ac88-14ed6072bebe",
    "metadata": {},
    "outputs": [],
@@ -343,9 +390,9 @@
     "    doc2_ents = doc2.ents\n",
     "    \n",
     "    if loose:\n",
-    "        doc1_matches, doc2_matches = overlaps(doc1_ents, doc2_ents,labels)\n",
+    "        doc1_matches, doc2_matches = overlaps(doc1_ents, doc2_ents, labels)\n",
     "    else:\n",
-    "        doc1_matches, doc2_matches = exact_match(doc1_ents, doc2_ents,labels)\n",
+    "        doc1_matches, doc2_matches = exact_match(doc1_ents, doc2_ents, labels)\n",
     "    \n",
     "    doc1_match_num = len(doc1_matches.keys())\n",
     "    doc2_match_num = len(doc2_matches.keys())\n",
@@ -363,53 +410,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "59e050a0",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Inv(3, 7, d=110)\n",
-      "l:  Inv(1, 3, d=100)\n",
-      "r:    Inv(2, 5, d=120)\n",
-      "r:  Inv(4, 6, d=130)\n",
-      "\n"
-     ]
-    }
-   ],
-   "source": [
-    "from quicksectx import IntervalNode, IntervalTree, Interval\n",
-    "tree = IntervalTree()\n",
-    "tree.add(1, 3, 100)\n",
-    "tree.add(3, 7, 110)\n",
-    "tree.add(2, 5, 120)\n",
-    "tree.add(4, 6, 130)\n",
-    "print(tree.pretty_print())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 64,
    "id": "b609c982-0b94-4913-b23b-a672950bd99b",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def pairwise_f1(confusion matrix):\n",
-    "    '''calculate f1 with given true positive, false positive, and false negative values'''\n",
+    "def pairwise_f1(tp,fp,fn):\n",
+    "    '''calculate f1 given true positive, false positive, and false negative values'''\n",
     "    \n",
-    "    return f1"
+    "    return (2*tp)/float(2*tp+fp+fn)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 65,
    "id": "c0b3a52c-8d6b-4a15-a7ae-5fc992f4564a",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def corpus_agreement(docs1, docs2, loose):\n",
+    "def corpus_agreement(docs1, docs2, loose=1, labels=1):\n",
     "    '''calculate f1 over an entire corpus of documents'''\n",
     "    corpus_tp, corpus_fp, corpus_fn = (0,0,0)\n",
     "    \n",
@@ -421,14 +440,6 @@
     "    \n",
     "    return pairwise_f1(tp,fp,fn)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "46da80bd-9e92-4685-8984-00aef59c9719",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
