Added basic functionality for IAA with span groups

--- a/notebooks/IAA-John.ipynb
+++ b/notebooks/IAA-John.ipynb
@@ -180,15 +180,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 30,
    "id": "ed28ee93-5f7a-4a34-b610-44467c63c92c",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[('a test', 'PERSON'), ('utah', 'GPE'), ('mississippi', 'PERSON'), ('lake', 'GPE'), ('city', 'GPE')]\n"
+     "ename": "IndexError",
+     "evalue": "[E035] Error creating span with start 13 and end 14 for Doc of length 10.",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mIndexError\u001b[0m                                Traceback (most recent call last)",
+      "Input \u001b[1;32mIn [30]\u001b[0m, in \u001b[0;36m<cell line: 3>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mspacy\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mtokens\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m Span\n\u001b[0;32m      2\u001b[0m spand \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mlist\u001b[39m()\n\u001b[1;32m----> 3\u001b[0m spand \u001b[38;5;241m+\u001b[39m\u001b[38;5;241m=\u001b[39m [Span(doc, \u001b[38;5;241m2\u001b[39m, \u001b[38;5;241m4\u001b[39m, label\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mPERSON\u001b[39m\u001b[38;5;124m\"\u001b[39m),Span(doc,\u001b[38;5;241m7\u001b[39m,\u001b[38;5;241m8\u001b[39m,label\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mGPE\u001b[39m\u001b[38;5;124m\"\u001b[39m),Span(doc,\u001b[38;5;241m9\u001b[39m,\u001b[38;5;241m10\u001b[39m,label\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mPERSON\u001b[39m\u001b[38;5;124m\"\u001b[39m),\u001b[43mSpan\u001b[49m\u001b[43m(\u001b[49m\u001b[43mdoc\u001b[49m\u001b[43m,\u001b[49m\u001b[38;5;241;43m13\u001b[39;49m\u001b[43m,\u001b[49m\u001b[38;5;241;43m14\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43mlabel\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mGPE\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m)\u001b[49m,Span(doc,\u001b[38;5;241m14\u001b[39m,\u001b[38;5;241m15\u001b[39m,label\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mGPE\u001b[39m\u001b[38;5;124m\"\u001b[39m)]\n\u001b[0;32m      5\u001b[0m \u001b[38;5;66;03m# Add the span to the doc's entities\u001b[39;00m\n\u001b[0;32m      6\u001b[0m doc\u001b[38;5;241m.\u001b[39ments \u001b[38;5;241m=\u001b[39m spand\n",
+      "File \u001b[1;32m~\\anaconda3\\envs\\python3.8\\lib\\site-packages\\spacy\\tokens\\span.pyx:100\u001b[0m, in \u001b[0;36mspacy.tokens.span.Span.__cinit__\u001b[1;34m()\u001b[0m\n",
+      "\u001b[1;31mIndexError\u001b[0m: [E035] Error creating span with start 13 and end 14 for Doc of length 10."
      ]
     }
    ],
@@ -227,6 +232,76 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b1a4ef92",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "102f0ebf",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import spacy"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "id": "b66da284",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "nlp = spacy.load(\"en_core_web_sm\")\n",
+    "\n",
+    "test_str = \"This is a test document. For testing lol.\"\n",
+    "test_str_2 = \"This is a test document. For testing lol.\"\n",
+    "\n",
+    "doc = nlp(test_str)\n",
+    "doc2 = nlp(test_str)\n",
+    "\n",
+    "from spacy.tokens import SpanGroup\n",
+    "\n",
+    "spans = [doc[0:1], doc[1:3]]\n",
+    "group = SpanGroup(doc, name=\"errors\", spans=spans, attrs={\"annotator\": \"matt\"})\n",
+    "doc.spans[\"errors\"] = group\n",
+    "group = SpanGroup(doc, name=\"entity1\", spans=spans, attrs={\"annotator\": \"John\"})\n",
+    "#doc.spans[\"entity\"] = group\n",
+    "\n",
+    "\n",
+    "spans = [doc2[0:1], doc2[1:5],doc2[4:5]]\n",
+    "group = SpanGroup(doc2, name=\"errors\", spans=spans, attrs={\"annotator\": \"matt\"})\n",
+    "doc2.spans[\"errors\"] = group\n",
+    "group = SpanGroup(doc2, name=\"entity1\", spans=spans, attrs={\"annotator\": \"John\"})\n",
+    "#doc2.spans[\"entity\"] = group"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "id": "ebb1dc10",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(2, 1, 0)"
+      ]
+     },
+     "execution_count": 49,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "agreement(doc,doc2,ent_or_span='span')"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "098164e2",
    "metadata": {},
@@ -236,7 +311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 25,
    "id": "9f8afd7e",
    "metadata": {},
    "outputs": [],
@@ -327,7 +402,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 26,
    "id": "00a8e6a7-7116-405c-addd-b19e08a9fae6",
    "metadata": {},
    "outputs": [],
@@ -372,12 +447,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 45,
    "id": "650bc405-f61d-4287-ac88-14ed6072bebe",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def agreement(doc1, doc2, loose=1, labels=1):\n",
+    "def agreement(doc1, doc2, loose=1, labels=1, ent_or_span = 'ent'):\n",
     "    '''Calculates confusion matrix for agreement between two documents.\n",
     "    \n",
     "       returns true positive, false positive, and false negative\n",
@@ -386,8 +461,20 @@
     "    fp = 0 #False Positives\n",
     "    fn = 0 #False Negatives\n",
     "    \n",
-    "    doc1_ents = doc1.ents\n",
-    "    doc2_ents = doc2.ents\n",
+    "    if ent_or_span == 'ent':\n",
+    "        doc1_ents = doc1.ents\n",
+    "        doc2_ents = doc2.ents\n",
+    "    elif ent_or_span == 'span':\n",
+    "        if len(doc1.spans) > 1:\n",
+    "            #raise error\n",
+    "            print(\"Error: cannot distinquish which span group to use.\")\n",
+    "        else:\n",
+    "            span_group = list(doc1.spans.keys())[0]\n",
+    "            doc1_ents = doc1.spans[span_group]\n",
+    "            doc2_ents = doc2.spans[span_group]\n",
+    "    else:\n",
+    "        print(\"fail\")\n",
+    "        \n",
     "    \n",
     "    if loose:\n",
     "        doc1_matches, doc2_matches = overlaps(doc1_ents, doc2_ents, labels)\n",
@@ -410,7 +497,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 28,
    "id": "b609c982-0b94-4913-b23b-a672950bd99b",
    "metadata": {},
    "outputs": [],
@@ -423,7 +510,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 29,
    "id": "c0b3a52c-8d6b-4a15-a7ae-5fc992f4564a",
    "metadata": {},
    "outputs": [],
@@ -440,6 +527,14 @@
     "    \n",
     "    return pairwise_f1(tp,fp,fn)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b01c45b1",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
