Agreement can now be checked between ents in one doc, and span group in another. Cleaned up the structure and updated corpus_agreement functionality.

--- a/notebooks/IAA-John.ipynb
+++ b/notebooks/IAA-John.ipynb
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "07738af3-f6f3-4868-be7b-69258b0ec3aa",
    "metadata": {},
    "outputs": [],
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "eea5c733-d512-4bed-b643-cb0a5a01915c",
    "metadata": {},
    "outputs": [],
@@ -110,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "919e2eea-0032-4232-95a8-a57085cb3310",
    "metadata": {},
    "outputs": [],
@@ -120,28 +120,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "add063d2-cb64-451f-8dda-65cc9cd719e0",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(utah, mississippi)"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "doc.ents"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "bda30c7e-df45-4e2e-b63e-916da8f1ffe4",
    "metadata": {},
    "outputs": [],
@@ -151,21 +140,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "20aaf660-1860-489a-a326-06347f7b78d6",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(utah, mississippi, lake city)"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "doc2.ents"
    ]
@@ -180,23 +158,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": null,
    "id": "ed28ee93-5f7a-4a34-b610-44467c63c92c",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "IndexError",
-     "evalue": "[E035] Error creating span with start 13 and end 14 for Doc of length 10.",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mIndexError\u001b[0m                                Traceback (most recent call last)",
-      "Input \u001b[1;32mIn [30]\u001b[0m, in \u001b[0;36m<cell line: 3>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mspacy\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mtokens\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m Span\n\u001b[0;32m      2\u001b[0m spand \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mlist\u001b[39m()\n\u001b[1;32m----> 3\u001b[0m spand \u001b[38;5;241m+\u001b[39m\u001b[38;5;241m=\u001b[39m [Span(doc, \u001b[38;5;241m2\u001b[39m, \u001b[38;5;241m4\u001b[39m, label\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mPERSON\u001b[39m\u001b[38;5;124m\"\u001b[39m),Span(doc,\u001b[38;5;241m7\u001b[39m,\u001b[38;5;241m8\u001b[39m,label\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mGPE\u001b[39m\u001b[38;5;124m\"\u001b[39m),Span(doc,\u001b[38;5;241m9\u001b[39m,\u001b[38;5;241m10\u001b[39m,label\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mPERSON\u001b[39m\u001b[38;5;124m\"\u001b[39m),\u001b[43mSpan\u001b[49m\u001b[43m(\u001b[49m\u001b[43mdoc\u001b[49m\u001b[43m,\u001b[49m\u001b[38;5;241;43m13\u001b[39;49m\u001b[43m,\u001b[49m\u001b[38;5;241;43m14\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43mlabel\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mGPE\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m)\u001b[49m,Span(doc,\u001b[38;5;241m14\u001b[39m,\u001b[38;5;241m15\u001b[39m,label\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mGPE\u001b[39m\u001b[38;5;124m\"\u001b[39m)]\n\u001b[0;32m      5\u001b[0m \u001b[38;5;66;03m# Add the span to the doc's entities\u001b[39;00m\n\u001b[0;32m      6\u001b[0m doc\u001b[38;5;241m.\u001b[39ments \u001b[38;5;241m=\u001b[39m spand\n",
-      "File \u001b[1;32m~\\anaconda3\\envs\\python3.8\\lib\\site-packages\\spacy\\tokens\\span.pyx:100\u001b[0m, in \u001b[0;36mspacy.tokens.span.Span.__cinit__\u001b[1;34m()\u001b[0m\n",
-      "\u001b[1;31mIndexError\u001b[0m: [E035] Error creating span with start 13 and end 14 for Doc of length 10."
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from spacy.tokens import Span\n",
     "spand = list()\n",
@@ -211,19 +176,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": null,
    "id": "13836407",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "2 1 2\n",
-      "0.5714285714285714\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#Run below cells before this\n",
     "tp,fp,fn = agreement(doc,doc2,1,1)\n",
@@ -241,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 7,
    "id": "102f0ebf",
    "metadata": {},
    "outputs": [],
@@ -251,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 8,
    "id": "b66da284",
    "metadata": {},
    "outputs": [],
@@ -282,23 +238,131 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 17,
+   "id": "f4725109",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[('a test', 'PERSON'), ('utah', 'GPE'), ('mississippi', 'PERSON'), ('lake', 'GPE'), ('city', 'GPE')]\n",
+      "[utah, or mississippi]\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "from spacy.tokens import Span\n",
+    "import spacy\n",
+    "\n",
+    "nlp = spacy.load(\"en_core_web_sm\")\n",
+    "\n",
+    "doc = nlp(\"this is a test document made in utah or mississippi, or salt lake city.\")\n",
+    "\n",
+    "spand = list()\n",
+    "spand += [Span(doc, 2, 4, label=\"PERSON\"),Span(doc,7,8,label=\"GPE\"),Span(doc,9,10,label=\"PERSON\"),Span(doc,13,14,label=\"GPE\"),Span(doc,14,15,label=\"GPE\")]\n",
+    "\n",
+    "# Add the span to the doc's entities\n",
+    "doc.ents = spand\n",
+    "\n",
+    "print([(ent.text, ent.label_) for ent in doc.ents])\n",
+    "\n",
+    "from spacy.tokens import SpanGroup\n",
+    "\n",
+    "spans = [doc[7:8], doc[8:10]]\n",
+    "group = SpanGroup(doc, name=\"errors\", spans=spans, attrs={\"annotator\": \"matt\"})\n",
+    "doc.spans[\"errors\"] = group\n",
+    "print(doc.spans['errors'])\n",
+    "print(doc.spans['errors'][0].label_)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "f31a8269",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[utah, or mississippi]\n",
+      "what\n",
+      "what\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(doc.spans['errors'])\n",
+    "for span in doc.spans['errors']:\n",
+    "    print('what')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "id": "c5026449",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(2, 0, 3)"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "agreement(doc.ents,doc.spans['errors'],labels=0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
    "id": "ebb1dc10",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(2, 1, 0)"
+       "(0, 0, 5)"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 60,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "agreement(doc,doc2,ent_or_span='span')"
+    "agreement(doc,doc2,ent_or_span='ent')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "id": "f41f7c82",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "spacy.tokens.doc.Doc"
+      ]
+     },
+     "execution_count": 57,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type(doc.ents[0]) is spacy.tokens.span.Span\n",
+    "type(doc.spans['errors']) is spacy.tokens.span_group.SpanGroup\n",
+    "\n",
+    "type(doc)"
    ]
   },
   {
@@ -311,7 +375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 1,
    "id": "9f8afd7e",
    "metadata": {},
    "outputs": [],
@@ -324,7 +388,7 @@
     "\n",
     "#This makes the code a little more complicated to understand, but I think it makes everything more transparent and adaptable.\n",
     "\n",
-    "def overlaps(doc1_ents, doc2_ents,labels):\n",
+    "def overlaps(doc1_ents, doc2_ents,labels=1):\n",
     "    '''Calculates overlapping entities between two spacy documents. Also checks for matching labels if label=1.\n",
     "    \n",
     "    Return:\n",
@@ -362,7 +426,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "id": "f9b138a1-a375-4503-93fd-76cf9e2721b1",
    "metadata": {},
    "outputs": [],
@@ -402,7 +466,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 2,
    "id": "00a8e6a7-7116-405c-addd-b19e08a9fae6",
    "metadata": {},
    "outputs": [],
@@ -447,7 +511,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 58,
    "id": "650bc405-f61d-4287-ac88-14ed6072bebe",
    "metadata": {},
    "outputs": [],
@@ -457,23 +521,31 @@
     "    \n",
     "       returns true positive, false positive, and false negative\n",
     "    '''\n",
-    "    tp = 0 #True Positives\n",
-    "    fp = 0 #False Positives\n",
-    "    fn = 0 #False Negatives\n",
-    "    \n",
-    "    if ent_or_span == 'ent':\n",
-    "        doc1_ents = doc1.ents\n",
-    "        doc2_ents = doc2.ents\n",
-    "    elif ent_or_span == 'span':\n",
-    "        if len(doc1.spans) > 1:\n",
-    "            #raise error\n",
-    "            print(\"Error: cannot distinquish which span group to use.\")\n",
+    "    if (type(doc1) is tuple) or (type(doc1) is spacy.tokens.span_group.SpanGroup) and \\\n",
+    "    (type(doc2) is tuple) or (type(doc2) is spacy.tokens.span_group.SpanGroup):\n",
+    "        doc1_ents = doc1\n",
+    "        doc2_ents = doc2\n",
+    "    elif (type(doc1) is spacy.tokens.doc.Doc) and (type(doc2) is spacy.tokens.doc.Doc):\n",
+    "        if ent_or_span == 'ent':\n",
+    "            doc1_ents = doc1.ents\n",
+    "            doc2_ents = doc2.ents\n",
+    "        elif ent_or_span == 'span':\n",
+    "            if len(doc1.spans) > 1:\n",
+    "                #raise error\n",
+    "                print(\"Error: cannot distinquish which span group to use from doc1.\")\n",
+    "                return\n",
+    "            else:\n",
+    "                span_group = list(doc1.spans.keys())[0]\n",
+    "                doc1_ents = doc1.spans[span_group]\n",
+    "                doc2_ents = doc2.spans[span_group]\n",
     "        else:\n",
-    "            span_group = list(doc1.spans.keys())[0]\n",
-    "            doc1_ents = doc1.spans[span_group]\n",
-    "            doc2_ents = doc2.spans[span_group]\n",
+    "            #raise error\n",
+    "            print(\"Error: Must select 'span' or 'ent' for ent_or_span option.\")\n",
+    "            return\n",
     "    else:\n",
-    "        print(\"fail\")\n",
+    "        #raise error\n",
+    "        print(\"Input must be of type 'tuples', 'spacy.tokens.span_group.SpanGroup', or 'spacy.tokens.doc.Doc'\")\n",
+    "        return\n",
     "        \n",
     "    \n",
     "    if loose:\n",
@@ -481,6 +553,18 @@
     "    else:\n",
     "        doc1_matches, doc2_matches = exact_match(doc1_ents, doc2_ents, labels)\n",
     "    \n",
+    "    return conf_matrix(doc1_matches,doc2_matches,len(doc1_ents),len(doc2_ents))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "b01c45b1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def conf_matrix(doc1_matches,doc2_matches,doc1_ent_num,doc2_ent_num):\n",
+    "\n",
     "    doc1_match_num = len(doc1_matches.keys())\n",
     "    doc2_match_num = len(doc2_matches.keys())\n",
     "    \n",
@@ -489,15 +573,15 @@
     "        duplicate_matches += len(value) - 1\n",
     "    \n",
     "    tp = doc1_match_num - duplicate_matches #How many entity indices from doc1 matched, minus duplicated matches\n",
-    "    fp = len(doc2_ents) - doc2_match_num #How many entities from doc2 that didn't match\n",
-    "    fn = len(doc1_ents) - doc1_match_num #How many entities from doc1 that didn't match\n",
+    "    fp = doc2_ent_num - doc2_match_num #How many entities from doc2 that didn't match\n",
+    "    fn = doc1_ent_num - doc1_match_num #How many entities from doc1 that didn't match\n",
     "    \n",
-    "    return (tp, fp, fn)\n"
+    "    return (tp,fp,fn)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 5,
    "id": "b609c982-0b94-4913-b23b-a672950bd99b",
    "metadata": {},
    "outputs": [],
@@ -510,17 +594,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 6,
    "id": "c0b3a52c-8d6b-4a15-a7ae-5fc992f4564a",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def corpus_agreement(docs1, docs2, loose=1, labels=1):\n",
+    "def corpus_agreement(docs1, docs2, loose=1, labels=1,ent_or_span='ent'):\n",
     "    '''calculate f1 over an entire corpus of documents'''\n",
     "    corpus_tp, corpus_fp, corpus_fn = (0,0,0)\n",
     "    \n",
     "    for i, doc1 in enumerate(docs1):\n",
-    "        tp,fp,fn = agreement(doc1, docs2[i],loose)\n",
+    "        tp,fp,fn = agreement(doc1, docs2[i],loose,labels,ent_or_span)\n",
     "        corpus_tp += tp\n",
     "        corpus_fp += fp\n",
     "        corpus_fn += fn\n",
@@ -531,7 +615,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b01c45b1",
+   "id": "ce5b5804",
    "metadata": {},
    "outputs": [],
    "source": []
