add description for this notebook

--- a/notebooks/eHost_annotation2medspacyDoc.ipynb
+++ b/notebooks/eHost_annotation2medspacyDoc.ipynb
@@ -5,7 +5,8 @@
    "id": "b00ccc6c-428a-48c3-9e37-707c4c215660",
    "metadata": {},
    "source": [
-    "# Convert Ehost annotation to MedSpacy Document Object"
+    "# Convert Ehost annotation to MedSpacy Document Object\n",
+    "In this note book, we read in annotations and build SpanGroup from overlapped spans. We also build dataframe from annotation for building up OHDSI format database later."
    ]
   },
   {
